# SGDA_Game_Jam_Proj

./: Cargo.toml  README.md
assets/prefabs/background/: background.ron
assets/prefabs/character/: enemy.ron  player.ron
assets/prefabs/obstacle/: car.ron  dog.ron  mud.ron
assets/prefabs/ui/: cutscene-irc-line.ron  game-over.ron  gameplay-score.ron  grey-overlay.ron  menu.ron  options.ron  paused.ron
assets/sprites/: BG.ron  Gamer.ron  background.ron  dogRight.ron  frontView.ron  mud.ron  policeCarLeft.ron  test-1.ron  walkRight.ron
config/: display.ron  inputs.ron
src/: main.rs  state.rs  utils.rs
src/components/: background.rs  car.rs  dog.rs  enemy.rs  mod.rs  mud.rs  player.rs
src/resources/: audio.rs  controls.rs  mod.rs  prefabs.rs  sprites.rs
src/states/: cutscene.rs  game.rs  gameover.rs  gameplay.rs  loading.rs  menu.rs  mod.rs  options.rs  pause.rs  test.rs
src/systems/: background.rs  car.rs  dog.rs  enemy.rs  mod.rs  mud.rs  obstacles.rs  player.rs  score_tracking.rs  test_system.rs
