[package]
name = "game"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
rand = "0.7.3"
log = { version = "0.4.8", features = ["serde"] }
nalgebra = "0.19"
serde = "1.0.114"
shrev = "1.1.1"


[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
